@@ -4,6 +4,7 @@ Gaupol 0.8
  * Check PyEnchant 1.3.0 for API changes
  * Search for "FIX", "TODO", etc.
  * Review menu mnemonics
+ * What settings should dialogs remember?
  * Examine Application.update_gui calls
  * Test searching for unicode strings and regexes
  * util.gc_collected
